add subnav menu and complete Contacts page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="wrapper">
     <div id="titlediv">
-      <h1 class="Title">George Scott</br><div id="subtitle">Software Developer</div></h1>
+      <h1 class="typewriter">George Scott</br><div id="subtitle">Software Developer</div></h1>
       <img
         id="homeimg"
         src="./images/George Scott.jpg"
@@ -38,16 +38,17 @@
       <a href="my_work.html">My Work</a>
       <a href="#">Contact</a>
     </nav>
-    <p id="homebio">
-      I am a trainee software developer currently based in the North-West of England. After a successful career in the arts sector delivering on many prolific projects such as a world-class classical music festival and summer school, I have gradually been turning to a career in software development.</br></br>
+    <main class="main_content">
+      <p id="homebio">
+        I am a trainee software developer currently based in the North-West of England. After a successful career in the arts sector delivering on many prolific projects such as a world-class classical music festival and summer school, I have gradually been turning to a career in software development.</br></br>
 
-      I have always had a natural aptitude for both music and maths, and I believe these traits are part of the reason that I have been able to quickly understand the patterns and syntax that make up coding languages. Alongside this, my turn towards software development has been aided by my 3+ years experience working in a software company servicing the arts sector. The team at Spektrix have encouraged me to learn to code on the job, and I have therefore been able to use my technical skills to drive success for the company's clients by delivering clever software solutions for everyday and bespoke issues.</br></br>
-      
-      I am now currently completing with my software development training via a full-time software development bootcamp with NorthCoders whilst on voluntary furlough from my current position. I keen to hear about part- or full-time work in the North-West as a software developer working with any language, and I'm available to chat any time!</br></br>
+        I have always had a natural aptitude for both music and maths, and I believe these traits are part of the reason that I have been able to quickly understand the patterns and syntax that make up coding languages. Alongside this, my turn towards software development has been aided by my 3+ years experience working in a software company servicing the arts sector. The team at Spektrix have encouraged me to learn to code on the job, and I have therefore been able to use my technical skills to drive success for the company's clients by delivering clever software solutions for everyday and bespoke issues.</br></br>
+        
+        I am now currently completing with my software development training via a full-time software development bootcamp with NorthCoders whilst on voluntary furlough from my current position. I keen to hear about part- or full-time work in the North-West as a software developer working with any language, and I'm available to chat any time!</br></br>
 
-      <b>Please use the navigation bar to find out more!</b>
-    </p>
-    </section>
+        <b>Please use the navigation bar to find out more!</b>
+      </p>
+  </main>
     <footer>
       <div id="footerdiv">
         <a id="emailicon" target="_blank" href="mailto:grjscott1991@hotmail.com"><img src="./images/download.png" alt="email"></a>
