--- a/my_work.html
+++ b/my_work.html
@@ -12,7 +12,7 @@
   <body>
     <div class="wrapper">
     <div id="titlediv">
-      <h1 class="Title">George Scott</br><div id="subtitle">Software Developer</div></h1>
+      <h1 class="css-typing">George Scott</br><div class="css-typing" id="subtitle">Software Developer</div></h1>
       <img
         id="homeimg"
         src="./images/George Scott.jpg"
@@ -39,87 +39,89 @@
       <a class="active-page" href="my_work.html">My Work</a>
       <a href="#">Contact</a>
     </nav>
-    <div id="tech_skills_flex">
-        <div id="tech">
-            <h2 class="tech_skills_header">My Technologies</h2>
-            <div class="icon_skills_wrapper">
-                <i class="devicon-css3-plain-wordmark colored"></i>
-                <i class="devicon-git-plain-wordmark colored"></i>
-                <i class="devicon-github-plain-wordmark colored"></i>
-                <i class="devicon-heroku-plain-wordmark colored"></i>
-                <i class="devicon-html5-plain-wordmark colored"></i>
-                <i class="devicon-javascript-plain colored"></i>
-                <i class="devicon-jquery-plain-wordmark colored"></i>
-                <i class="devicon-linux-plain colored"></i>
-                <i class="devicon-nodejs-plain colored"></i>
-                <i class="devicon-npm-original-wordmark colored"></i>
-                <i class="devicon-postgresql-plain-wordmark colored"></i>
-                <i class="devicon-react-original-wordmark colored"></i>
-                <i class="devicon-ubuntu-plain-wordmark colored"></i>
-                <i class="devicon-visualstudio-plain colored"></i>
+   <main class="main_content">
+        <div id="tech_skills_flex">
+            <div id="tech">
+                <h2 class="tech_skills_header">My Technologies</h2>
+                <div class="icon_skills_wrapper">
+                    <i class="devicon-css3-plain-wordmark colored"></i>
+                    <i class="devicon-git-plain-wordmark colored"></i>
+                    <i class="devicon-github-plain-wordmark colored"></i>
+                    <i class="devicon-heroku-plain-wordmark colored"></i>
+                    <i class="devicon-html5-plain-wordmark colored"></i>
+                    <i class="devicon-javascript-plain colored"></i>
+                    <i class="devicon-jquery-plain-wordmark colored"></i>
+                    <i class="devicon-linux-plain colored"></i>
+                    <i class="devicon-nodejs-plain colored"></i>
+                    <i class="devicon-npm-original-wordmark colored"></i>
+                    <i class="devicon-postgresql-plain-wordmark colored"></i>
+                    <i class="devicon-react-original-wordmark colored"></i>
+                    <i class="devicon-ubuntu-plain-wordmark colored"></i>
+                    <i class="devicon-visualstudio-plain colored"></i>
+                </div>
             </div>
-        </div>
-        <div id="skills">
-            <h2 class="tech_skills_header">My Skills</h2>
-            <div class="icon_skills_wrapper">
-                <div id="skills_list">
-                    <li>-Pair Programming</li>
-                    <li>-Version control</li>
-                    <li>-Working remotely, in an office or offsite</li>
-                    <li>-Agile working</li>
-                    <li>-Team management</li>
-                    <li>-Mentoring</li>
-                    <li>-Test Driven Development</li>
+            <div id="skills">
+                <h2 class="tech_skills_header">My Skills</h2>
+                <div class="icon_skills_wrapper">
+                    <div id="skills_list">
+                        <li>-Pair Programming</li>
+                        <li>-Version control</li>
+                        <li>-Working remotely, in an office or offsite</li>
+                        <li>-Agile working</li>
+                        <li>-Team management</li>
+                        <li>-Mentoring</li>
+                        <li>-Test Driven Development</li>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <hr id="work_divider" class="solid">
-    <h2 id="work_title">Examples of My Work</h2>
-    <section id="work_wrapper">
-        <div class="work_flex_container">
-            <img class="work_img" src="./images/website_icon.png" alt="">
-            <div class="work_list">
-                <h4 class="project_title">This Website!</h4>
-                <div class="project_description">This website was an early project of mine, and was my first real use of CSS flex and grid functionality. It's still a living project;
-                    my plans are to utilise a CMS for the content, and to keep updating the design with any clever tricks I find.
-                </div></br>
-                <a class="work_github_link" href="">GitHub repo</a> 
+        <hr id="work_divider" class="solid">
+        <h2 id="work_title">Examples of My Work</h2>
+        <section id="work_wrapper">
+            <div class="work_flex_container">
+                <img class="work_img" src="./images/website_icon.png" alt="">
+                <div class="work_list">
+                    <h4 class="project_title">This Website!</h4>
+                    <div class="project_description">This website was an early project of mine, and was my first real use of CSS flex and grid functionality. It's still a living project;
+                        my plans are to utilise a CMS for the content, and to keep updating the design with any clever tricks I find.
+                    </div></br>
+                    <a class="work_github_link" href="">GitHub repo</a> 
+                </div>
             </div>
-        </div>
-        <div class="work_flex_container">
-            <img class="work_img" src="./images/pokemon-pokeball-game-go-34722.png" alt="">
-            <div class="work_list">
-                <h4 class="project_title">Pokémon Command Line Game</h4>
-                <div class="project_description">This project was one of the sprints I worked on during my time at NorthCoders.
-                    It's centred around a Pokémon battle emulator game that can be run in a terminal using Node.js.
-                    A frontend interface is in the works for this game as well.
-                    See the README on the GitHub for instructions on how to play!
-                </div></br>
-                <a class="work_github_link" href="">GitHub repo</a> 
+            <div class="work_flex_container">
+                <img class="work_img" src="./images/pokemon-pokeball-game-go-34722.png" alt="">
+                <div class="work_list">
+                    <h4 class="project_title">Pokémon Command Line Game</h4>
+                    <div class="project_description">This project was one of the sprints I worked on during my time at NorthCoders.
+                        It's centred around a Pokémon battle emulator game that can be run in a terminal using Node.js.
+                        A frontend interface is in the works for this game as well.
+                        See the README on the GitHub for instructions on how to play!
+                    </div></br>
+                    <a class="work_github_link" href="">GitHub repo</a> 
+                </div>
             </div>
-        </div>
-        <div class="work_flex_container">
-            <img class="work_img" src="./images/news_icon.png" alt="">
-            <div class="work_list">
-                <h4 class="project_title">NC News</h4>
-                <div class="project_description">This was another project that came out of a NorthCoders sprint. It features the seeding of an SQL database via knex.js with some test news article data, after which HTTP calls can be made via a server in order to GET, PATCH or POST data.
-                    Instructional API documentation is available in the GitHub repo. 
-                </div></br>
-                <a class="work_github_link" href="">GitHub repo</a> 
+            <div class="work_flex_container">
+                <img class="work_img" src="./images/news_icon.png" alt="">
+                <div class="work_list">
+                    <h4 class="project_title">NC News</h4>
+                    <div class="project_description">This was another project that came out of a NorthCoders sprint. It features the seeding of an SQL database via knex.js with some test news article data, after which HTTP calls can be made via a server in order to GET, PATCH or POST data.
+                        Instructional API documentation is available in the GitHub repo. 
+                    </div></br>
+                    <a class="work_github_link" href="">GitHub repo</a> 
+                </div>
             </div>
-        </div>
-        <div class="work_flex_container">
-            <img class="work_img" src="./images/weather-296-1100758.webp" alt="">
-            <div class="work_list">
-                <h4 class="project_title">Simple Weather App</h4>
-                <div class="project_description">This was a project of my own, which uses HTTP requests from the OpenWeather API and displays the results in a simple UI.
-                    Current weather by city and future forecasts are all available.
-                </div></br>
-                <a class="work_github_link" href="">GitHub repo</a> 
+            <div class="work_flex_container">
+                <img class="work_img" src="./images/weather-296-1100758.webp" alt="">
+                <div class="work_list">
+                    <h4 class="project_title">Simple Weather App</h4>
+                    <div >This was a project of my own, which uses HTTP requests from the OpenWeather API and displays the results in a simple UI.
+                        Current weather by city and future forecasts are all available.
+                    </div></br>
+                    <a class="work_github_link" href="">GitHub repo</a> 
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
     <footer>
         <div id="footerdiv">
           <a id="emailicon" target="_blank" href="mailto:grjscott1991@hotmail.com"><img src="./images/download.png" alt="email"></a>
