continue work on contacts page

--- a/my_work.html
+++ b/my_work.html
@@ -85,7 +85,7 @@
                     <div class="project_description">This website was an early project of mine, and was my first real use of CSS flex and grid functionality. It's still a living project;
                         my plans are to utilise a CMS for the content, and to keep updating the design with any clever tricks I find.
                     </div></br>
-                    <a class="work_github_link" href="">GitHub repo</a> 
+                    <a class="work_github_link" href="https://github.com/lancaster-coder1991/portfolio-website">GitHub repo</a> 
                 </div>
             </div>
             <div class="work_flex_container">
@@ -97,7 +97,7 @@
                         A frontend interface is in the works for this game as well.
                         See the README on the GitHub for instructions on how to play!
                     </div></br>
-                    <a class="work_github_link" href="">GitHub repo</a> 
+                    <a class="work_github_link" href="https://github.com/lancaster-coder1991/Node-Pokemon-Battler">GitHub repo</a> 
                 </div>
             </div>
             <div class="work_flex_container">
@@ -117,7 +117,7 @@
                     <div >This was a project of my own, which uses HTTP requests from the OpenWeather API and displays the results in a simple UI.
                         Current weather by city and future forecasts are all available.
                     </div></br>
-                    <a class="work_github_link" href="">GitHub repo</a> 
+                    <a class="work_github_link" href="https://github.com/lancaster-coder1991/Weather_App">GitHub repo</a> 
                 </div>
             </div>
         </section>
