complete projects page with weather app

--- a/about.html
+++ b/about.html
@@ -36,10 +36,10 @@
       <a href="index.html">Home</a>
       <a class="active-page" href="about.html">About</a>
       <a href="my_work.html">My Work</a>
-      <a href="#">Contact</a>
+      <a href="contact.html">Contact</a>
     </nav>
     <main class="main_content">
-      <h2 style="text-align:center">Bio</h2>
+      <h2 style="text-align:center; margin-top: 2%">Bio</h2>
       <section id="bio">
               <p id="firstpara" class="biopara">Hello! My name is George Scott. My passion is using code to solve problems and create clever solutions. Let me tell you my story.</p>
               <p id="secondpara" class="biopara">I have always been a lover of music and maths. In particular, I have pursued the study of music from a young age, striving toward the mastery of a selection of instruments and the theory of music until after my undergraduate degree in Music.
@@ -66,7 +66,7 @@
           <img id="bioicon2" src="./images/laptop.png" alt="notes" />
       </section>
       <hr class="solid">
-      <h2 style="text-align:center">Past Experience</h2>
+      <h2 id="past_experience_header" style="text-align:center">Past Experience</h2>
       <ul id="past_experience">
         <div class="experience_wrapper_grow">
             <li class="experience"><b>Team Manager, Support and Training - Spektrix</b></br>
