--- a/contact.html
+++ b/contact.html
@@ -33,21 +33,22 @@
   </div>
   </div>
     <nav>
-      <a class="active-page" href="index.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="my_work.html">My Work</a>
-      <a href="contact.html">Contact</a>
+      <a class="active-page" href="contact.html">Contact</a>
     </nav>
-    <main id="home_content" class="main_content">
-      <p id="homebio">
-        I am a trainee software developer currently based in the North-West of England. After a successful career in the arts sector delivering on many prolific projects such as a world-class classical music festival and summer school, I have gradually been turning to a career in software development.</br></br>
+    <main id="contact_content" class="main_content">
+      <p>
+        If you want to chat about any of my work, work experience or anything else, please feel free to get in touch any time! You can reach me on email at <a href="mailto:grjscott1991@hotmail.com">grjscott1991@hotmail.com</a><div class=""></div>
+    </p><br/>
+    <p>
+        Alternatively, please use the social media links that can be found in the footer of every page of the site.
+    </p><br />
+    <p>
+        I am currently based in the North West of England, but I am interested in hearing about job opportunities, networking events and anything else taking place across the entire country or abroad.
+    </p>
 
-        I have always had a natural aptitude for both music and maths, and I believe these traits are part of the reason that I have been able to quickly understand the patterns and syntax that make up coding languages. Alongside this, my turn towards software development has been aided by my 3+ years experience working in a software company servicing the arts sector. The team at Spektrix have encouraged me to learn to code on the job, and I have therefore been able to use my technical skills to drive success for the company's clients by delivering clever software solutions for everyday and bespoke issues.</br></br>
-        
-        I am currently completing with my software development training via a full-time software development bootcamp with NorthCoders whilst on voluntary furlough from my current position. I keen to hear about part- or full-time work in the North-West as a software developer working with any language, and I'm available to chat any time!</br></br>
-
-        <b>Please use the navigation bar to find out more!</b>
-      </p>
   </main>
     <footer>
       <div id="footerdiv">
