--- a/my_work.html
+++ b/my_work.html
@@ -37,7 +37,7 @@
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a class="active-page" href="my_work.html">My Work</a>
-      <a href="#">Contact</a>
+      <a href="contact.html">Contact</a>
     </nav>
    <main class="main_content">
         <div id="tech_skills_flex">
@@ -92,7 +92,7 @@
                 <img class="work_img" src="./images/pokemon-pokeball-game-go-34722.png" alt="">
                 <div class="work_list">
                     <h4 class="project_title">Pokémon Command Line Game</h4>
-                    <div class="project_description">This project was one of the sprints I worked on during my time at NorthCoders.
+                    <div class="project_description">This project was one of the sprints I worked on during my time at NorthCoders, but which I have added a lot of my own functionality to.
                         It's centred around a Pokémon battle emulator game that can be run in a terminal using Node.js.
                         A frontend interface is in the works for this game as well.
                         See the README on the GitHub for instructions on how to play!
@@ -104,16 +104,28 @@
                 <img class="work_img" src="./images/news_icon.png" alt="">
                 <div class="work_list">
                     <h4 class="project_title">NC News</h4>
-                    <div class="project_description">This was another project that came out of a NorthCoders sprint. It features the seeding of an SQL database via knex.js with some test news article data, after which HTTP calls can be made via a server in order to GET, PATCH or POST data.
-                        Instructional API documentation is available in the GitHub repo. 
+                    <div class="project_description">This project features both a back end and a front end. The back end features the seeding of an SQL database via knex.js with some test news article data, after which HTTP calls can be made via a server in order to GET, PATCH or POST data.
+                        The front end provides an interface for a user to search through the test new data, and leave and edit their comments (logged in as a test user). Both are hosted publicly - links below.
                     </div></br>
-                    <a class="work_github_link" href="">GitHub repo</a> 
+                    <a href="https://georges-nc-news.herokuapp.com/">Back End Host (try /api/articles. Full API documentation coming soon)</a>
+                    <a class="work_github_link" href="https://github.com/lancaster-coder1991/be-nc-news-public">GitHub repo for back end</a>
+                    <a href="https://george-scott-news.netlify.app/topics/cooking">Front End Host</a>
+                    <a class="work_github_link" href="https://github.com/lancaster-coder1991/nc-news">GitHub repo for front end</a> 
+                </div>
+            </div>
+            <div class="work_flex_container">
+                <img class="work_img" src="./images/meteorite.jpg" alt="">
+                <div class="work_list">
+                    <h4 class="project_title">React Meteorite SPA</h4>
+                    <div >This is an SPA that uses information from NASA's meteorite landing API to search for and map meteorites by year or by their categorisation.
+                    </div></br>
+                    <a class="work_github_link" href="https://github.com/lancaster-coder1991/Meteorite_React_SPA">GitHub repo</a> 
                 </div>
             </div>
             <div class="work_flex_container">
                 <img class="work_img" src="./images/weather-296-1100758.webp" alt="">
                 <div class="work_list">
-                    <h4 class="project_title">Simple Weather App</h4>
+                    <h4 class="project_title">Simple Weather App (WIP...)</h4>
                     <div >This was a project of my own, which uses HTTP requests from the OpenWeather API and displays the results in a simple UI.
                         Current weather by city and future forecasts are all available.
                     </div></br>
@@ -125,9 +137,9 @@
     <footer>
         <div id="footerdiv">
           <a id="emailicon" target="_blank" href="mailto:grjscott1991@hotmail.com"><img src="./images/download.png" alt="email"></a>
-          <a id="linkedinlogo" target="_blank" href="https://www.linkedin.com/in/george-scott-89948072/"><img src="./images/lnikedin.png" alt="email"></a>
-          <a id="twitterlogo" target="_blank" href="https://twitter.com/ScottyDoodleDoo?s=09"><img src="./images/Twitter_logo_blue.png" alt="email"></a>
-          <a id="githublogo" target="_blank" href="https://github.com/lancaster-coder1991"><img src="./images/GitHub_Logo.png" alt=""></a>
+          <a id="linkedinlogo" target="_blank" href="https://www.linkedin.com/in/george-scott-89948072/"><img src="./images/lnikedin.png" alt="linkedin"></a>
+          <a id="twitterlogo" target="_blank" href="https://twitter.com/ScottyDoodleDoo?s=09"><img src="./images/Twitter_logo_blue.png" alt="twitter"></a>
+          <a id="githublogo" target="_blank" href="https://github.com/lancaster-coder1991"><img src="./images/GitHub_Logo.png" alt="github"></a>
         </div>
       </div>
       </footer>
