updated wording and added skllshr

--- a/about.html
+++ b/about.html
@@ -57,10 +57,9 @@
                   me to take advantage of the company's excellent learning and development programmes and to start teaching myself more complex JavaScript on the job, whilst also setting up my own company initiative that saw the company's software engineers teach members of the STC team basic SQL.
               </p>
               <p id="fifthpara" class="biopara">After about 18 months working and thriving in my management position, I decided to make the most out of the working conditions made necessary by the Covid-19 pandemic and volunteered for full-time furlough from my position in June 2020. The purpose of this was to prepare to undertake full-time training in software development.
-                  As such, I signed up to study with NorthCoders, a provider of full-time, full stack software development bootcamps in the North of England, and began my formal studies with in August 2020 - I am on track to graduate in November 2020.
+                  As such, I signed up to study with NorthCoders, a provider of full-time, full stack software development bootcamps in the North of England, and completed my formal studies August 2020 - November 2020.
               </p>
-              <p id="sixthpara" class="biopara">I have never taken to any line of work with as much enthusiasm, alacrity and enjoyment as exploring the art of coding (and I do believe that the way in which developers chose to solve problems and leave their personal mark on projects does make it an art). I cannot wait to get started in full-time work as a developer and to see where my new career will take me. I will always keep my
-                  experience in delivering client-minded software solutions, team management and mentoring at the heart of my approach to any new role. I am looking forward to bringing this value to new working environments along with a huge amount of passion. Here's to the rest of my life!
+              <p id="sixthpara" class="biopara">I have never taken to any line of work with as much enthusiasm, alacrity and enjoyment as exploring the art of coding. It combines the logical and creative sides of my brain in ways that I hadn't previously thought possible. I am thrilled to be pursuing a line of work that I am even more passionate about than the arts, and I cannot wait to see where it takes me next.
               </p>
           <img id="bioicon1" src="./images/stave.jpg" alt="notes" />
           <img id="bioicon2" src="./images/laptop.png" alt="notes" />
