--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     </nav>
     <main id="home_content" class="main_content">
       <p id="homebio">
-        I am a trainee software developer currently based in the North-West of England. After a successful career in the arts sector delivering on many prolific projects such as a world-class classical music festival and summer school, I have gradually been turning to a career in software development.</br></br>
+        I am a software developer currently based in the North-West of England. After a successful career in the arts sector delivering on many prolific projects such as a world-class classical music festival and summer school, I have discovered a love for coding and have turned to a career in software development!</br></br>
 
-        I have always had a natural aptitude for both music and maths, and I believe these traits are part of the reason that I have been able to quickly understand the patterns and syntax that make up coding languages. Alongside this, my turn towards software development has been aided by my 3+ years experience working in a software company servicing the arts sector. The team at Spektrix have encouraged me to learn to code on the job, and I have therefore been able to use my technical skills to drive success for the company's clients by delivering clever software solutions for everyday and bespoke issues.</br></br>
+        I have always had a natural aptitude for both music and maths, and I believe these traits are part of the reason that I have been able to quickly understand the patterns and syntax that make up coding languages. My turn towards software development has been aided by my 3+ years experience working in a software company servicing the arts sector. The team at Spektrix encouraged me to learn to code on the job, and I was therefore been able to use my technical skills to drive success for the company's clients by delivering clever software solutions for everyday and bespoke issues.</br></br>
         
-        I am currently completing with my software development training via a full-time software development bootcamp with NorthCoders whilst on voluntary furlough from my current position. I keen to hear about part- or full-time work in the North-West as a software developer working with any language, and I'm available to chat any time!</br></br>
+        I have now completed a full-time software development bootcamp with the award winning NorthCoders, as well as building a portfolio of personal projects. I keen to hear about part- or full-time as a software developer working with any language, and I'm available to chat any time!</br></br>
 
         <b>Please use the navigation bar to find out more!</b>
       </p>
