--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         I have always had a natural aptitude for both music and maths, and I believe these traits are part of the reason that I have been able to quickly understand the patterns and syntax that make up coding languages. My turn towards software development has been aided by my 3+ years experience working in a software company servicing the arts sector. The team at Spektrix encouraged me to learn to code on the job, and I was therefore been able to use my technical skills to drive success for the company's clients by delivering clever software solutions for everyday and bespoke issues.</br></br>
         
-        I have now completed a full-time software development bootcamp with the award winning NorthCoders, as well as building a portfolio of personal projects. I keen to hear about part- or full-time as a software developer working with any language, and I'm available to chat any time!</br></br>
+        I have now completed a full-time software development bootcamp with the award winning NorthCoders, as well as building a portfolio of personal projects. I am keen to hear about part- or full-time as a software developer working with any language, and I'm available to chat any time!</br></br>
 
         <b>Please use the navigation bar to find out more!</b>
       </p>
