updated weather app info on my work page

--- a/my_work.html
+++ b/my_work.html
@@ -136,10 +136,11 @@
             <div class="work_flex_container">
                 <img class="work_img" src="./images/weather-296-1100758.webp" alt="">
                 <div class="work_list">
-                    <h4 class="project_title">Simple Weather App (WIP...)</h4>
-                    <div >This was a project of my own, which uses HTTP requests from the OpenWeather API and displays the results in a simple UI.
+                    <h4 class="project_title">Simple Weather App</h4>
+                    <div >This was a project of my own, which uses HTTP requests to the OpenWeather API and displays the results in a simple UI.
                         Current weather by city and future forecasts are all available.
                     </div></br>
+                    <a href="https://georgesweatherapp.netlify.app/">Live Host</a>
                     <a class="work_github_link" href="https://github.com/lancaster-coder1991/Weather_App">GitHub repo</a> 
                 </div>
             </div>
